// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`failures 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_started: describe > one
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > one
test_fn_failure: describe > one
hook_start: describe > afterEach
hook_failure: describe > afterEach
test_done: describe > one
test_start: describe > two
test_started: describe > two
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > two
test_fn_success: describe > two
hook_start: describe > afterEach
hook_failure: describe > afterEach
test_done: describe > two
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`function descriptors 1`] = `
"start_describe_definition: describer
add_test: describer > One
finish_describe_definition: describer
run_start
run_describe_start: 
run_describe_start: describer
test_start: describer > One
test_started: describer > One
test_fn_start: describer > One
test_fn_success: describer > One
test_done: describer > One
run_describe_finish: describer
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`simple test 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_started: describe > one
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > one
test_fn_success: describe > one
hook_start: describe > afterEach
hook_success: describe > afterEach
test_done: describe > one
test_start: describe > two
test_started: describe > two
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > two
test_fn_success: describe > two
hook_start: describe > afterEach
hook_success: describe > afterEach
test_done: describe > two
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;
